--- a/Resources/index.html
+++ b/Resources/index.html
@@ -10,6 +10,7 @@
     <body>
         <div id="wrapper">
             <div id="board"></div>
+            <div id="laser"></div>
             <div id="pieces"></div>
         </div>
         <script type="text/javascript" src="js/khet.js"></script>
