--- a/Resources/index.html
+++ b/Resources/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
         <title>Khet</title>
         <link rel="stylesheet" media="all" href="css/khet.css" />
         <script type="text/javascript" src="js/xui-core-1.0.0.js"></script>
@@ -13,6 +14,7 @@
             <div id="laser"></div>
             <div id="pieces"></div>
         </div>
+        <div id="menu"></div>
         <script type="text/javascript" src="js/khet.js"></script>
     </body>
 </html>
