--- a/Resources/index.html
+++ b/Resources/index.html
@@ -16,7 +16,9 @@
             <div id="laser"></div>
             <div id="pieces"></div>
         </div>
-        <div id="menu"></div>
+        <div id="menu">
+            <div id="done">Done</div>
+        </div>
         <script type="text/javascript" src="js/khet.js"></script>
     </body>
 </html>
