--- a/Resources/index.html
+++ b/Resources/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
         <title>Khet</title>
         <link rel="stylesheet" media="all" href="css/khet.css" />
+        <link rel="stylesheet" media="screen and (min-device-width: 480px)" href="css/ipad.css" />
         <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/pubsub.hottub.js"></script>
         <script type="text/javascript" src="js/xui-core-1.0.0.js"></script>
