--- a/Resources/index.html
+++ b/Resources/index.html
@@ -3,9 +3,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         <title>Khet</title>
         <link rel="stylesheet" media="all" href="css/khet.css" />
         <link rel="stylesheet" media="screen and (min-device-width: 480px)" href="css/ipad.css" />
+        <link rel="apple-touch-icon" href="icon.png" />
+        <link rel="apple-touch-startup-image" href="Default.jpg" />
         <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/pubsub.hottub.js"></script>
         <script type="text/javascript" src="js/xui-core-1.0.0.js"></script>
