--- a/Resources/index.html
+++ b/Resources/index.html
@@ -20,6 +20,13 @@
             <div id="menu">
                 <div id="done">Done</div>
             </div>
+            <div id="install">
+                <div class="table">
+                    <div class="cell">
+                        <p>Press <strong>+</strong> and then <strong>Add to Home Screen</strong> to install <strong>Khet</strong> prototype.</p>
+                    </div>
+                </div>
+            </div>
         </div>
         
         <script type="text/javascript" src="js/khet.js"></script>
