Adjusted sizes to accomodate status bar for iphone

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -6,7 +6,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         <title>Khet</title>
         <link rel="stylesheet" media="all" href="css/khet.css" />
-        <link rel="stylesheet" media="screen and (min-device-width: 480px)" href="css/ipad.css" />
+        <!--link rel="stylesheet" media="screen and (min-device-width: 480px)" href="css/ipad.css" /-->
         <link rel="apple-touch-icon" href="icon.png" />
         <link rel="apple-touch-startup-image" href="Default.jpg" />
         <script type="text/javascript" src="js/utils.js"></script>
@@ -20,7 +20,14 @@
             <div id="menu">
                 <div id="done">Done</div>
             </div>
-            <div id="install">
+            <div id="landscape" class="screen">
+                <div class="table">
+                    <div class="cell">
+                        <p>Please turn to <strong>landscape</strong> to try this <strong>Khet</strong> prototype.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="install" class="screen">
                 <div class="table">
                     <div class="cell">
                         <p>Press <strong>+</strong> and then <strong>Add to Home Screen</strong> to install <strong>Khet</strong> prototype.</p>
