Fix iPad edition

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -6,7 +6,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         <title>Khet</title>
         <link rel="stylesheet" media="all" href="css/khet.css" />
-        <!--link rel="stylesheet" media="screen and (min-device-width: 480px)" href="css/ipad.css" /-->
+        <link rel="stylesheet" media="screen and (min-device-width: 480px)" href="css/ipad.css" />
         <link rel="apple-touch-icon" href="icon.png" />
         <link rel="apple-touch-startup-image" href="Default.jpg" />
         <script type="text/javascript" src="js/utils.js"></script>
